[gd_scene load_steps=2 format=3 uid="uid://djb5o42t63sgn"]

[ext_resource type="Script" path="res://Assets/Scenes/Tutorial.gd" id="1_s1ibj"]

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_s1ibj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1280, 800)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TopTutorial" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PirateTutorial" type="PanelContainer" parent="VBoxContainer/TopTutorial"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PirateTutorialText" type="Label" parent="VBoxContainer/TopTutorial/PirateTutorial"]
custom_minimum_size = Vector2(1280, 2.08165e-12)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 16
theme_override_font_sizes/font_size = 64
text = "Pirate ships come in from the top "
horizontal_alignment = 1
vertical_alignment = 1

[node name="MiddleTutorial" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="MovementTutorial" type="PanelContainer" parent="VBoxContainer/MiddleTutorial"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 182.0

[node name="MovementTutorialText" type="Label" parent="VBoxContainer/MiddleTutorial/MovementTutorial"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 16
theme_override_font_sizes/font_size = 64
text = "Move your ships with arrow keys
All ships move at once"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(1280, 2.08165e-12)
layout_mode = 2

[node name="FishingShipTutorial" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="FishingShipTutorialText" type="Label" parent="VBoxContainer/HBoxContainer/FishingShipTutorial"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 16
theme_override_font_sizes/font_size = 64
text = "Fishing ships
come in
from the left"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FishTutorial" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="FishTutorialText" type="Label" parent="VBoxContainer/HBoxContainer/FishTutorial"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 16
theme_override_font_sizes/font_size = 64
text = "Fish come in
from the right"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="BottomTutorial" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VillageTutorial" type="PanelContainer" parent="VBoxContainer/BottomTutorial"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VillageTutorialText" type="Label" parent="VBoxContainer/BottomTutorial/VillageTutorial"]
custom_minimum_size = Vector2(1280, 2.08165e-12)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 16
theme_override_font_sizes/font_size = 64
text = "Protect your village at the
bottom and catch fish
with your ships"
horizontal_alignment = 1
vertical_alignment = 1
